# SafeAI

./: .gitignore  CONTRIBUTING.md  ChangeLog  LICENSE.md  MANIFEST.in  README.md  add_license.sh  reinstall  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.circleci/: config.yml
assets/practices/examples/: identity.py
assets/practices/models/: classification.py  fibonachi.py  joint_confident.py  lenet.py  matmul.py
assets/practices/tests/: test_joint_confident.py
examples/: __init__.py  classification.py  joint_confident.py  sample_model.py  simple_fibonachi.py  simple_lenet.py  simple_matmul.py  vgg123.py
safeai/: __init__.py  joint_confident.py
safeai/datasets/: cifar10.py  cifar100.py  dummies.py  fetcher.py  keras.py  keras_datasets.py  stl10.py  svhn.py  tinyimagenet.py  tinyimagenet200.py
safeai/metrics/: __init__.py  confusion.py
safeai/models/: identity.py  joint_confident.py  sample_model.py  vgg.py  vgg123.py
safeai/models/aux_module/: aux_module.py
safeai/models/joint_confident/: README.md  __init__.py  default_submodels.py  joint_confident.py
safeai/tests/: test_datasets.py  test_joint_confident.py  test_utils.py
safeai/utils/: __init__.py  distribution.py  experiment.py  utils.py
