[metadata]
name = safeai
summary = Tensorflow implementations of predictive uncertainty modules/models 
home-page = http://episci-inc.com/
author = Episys Science, Inc.
author_email = sangsulee92@gmail.com
description-file = README.md
url = https://github.com/EpiSci/SafeAI
license = MIT 
requires-python = >=3.0
classifier =
    Development Status :: 4 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
keywords =
    tensorflow

[files]
packages =
    safeai
